--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -3,6 +3,9 @@
     border-radius: 10px;
     background-color: white;
     padding: 34px 34px 37px 36px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 @media screen and (max-width:520px) {
     .popup__container {
