--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,13 @@
 @import url(./blocks/popup/__input/popup__input.css);
 @import url(./blocks/popup/__input-span/popup__input-span.css);
 @import url(./blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(./blocks/popup/__feedback-caption/popup__feedback-caption.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__back-to/header__back-to.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__exit/header__exit.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/register/register.css);
 @import url(./blocks/register/__title/register__title.css);
 @import url(./blocks/register/__form/register__form.css);
